--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,4 @@ crashlytics-build.properties
 /[Aa]ssets/Plugins/Demigiant/DOTweenPro Examples
 /[Aa]ssets/TextMesh Pro/Documentation
 /[Aa]ssets/Plugins/Febucci/Text Animator/Example
+.vsconfig
